<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="app1">SPOTIFY STREAMER</string>
    <string name="app2">SCORES APP</string>
    <string name="app3">LIBRARY APP</string>
    <string name="app4">BUILD IT BIGGER</string>
    <string name="app5">XYZ READER</string>
    <string name="app6">CAPSTON: MY OWN APP</string>

    <string name="tag_app1">Media Streamer</string>
    <string name="tag_app2">Scores</string>
    <string name="tag_app3">Library</string>
    <string name="tag_app4">Build It Bigger</string>
    <string name="tag_app5">XYZ Reader</string>
    <string name="tag_app6">Capston: My Own</string>

</resources>
